VarnostIngress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: varnost
  annotations:
    # kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.global-static-ip-name: "varnost"
spec:
  tls:
  - secretName: varnost-tls
  rules:
  - host: kb.demo.varnost.io
    http:
      paths:
      - backend:
          serviceName: kb-nodeport
          servicePort: 5601
  - host: es.demo.varnost.io
    http:
      paths:
      - backend:
          serviceName: es-nodeport
          servicePort: 9200
  - host: sp.demo.varnost.io
    http:
      paths:
      - backend:
          serviceName: sp-nodeport
          servicePort: 8000
